# IQ9_Develop

./: .gitignore  BEST.md  CLAUDE.md  LESSONS.md  README.md  SUMMARY.md  config.toml.example  kernel.toml
IQ9/dma_buf_pipline/dmabuf_consumer/: CMakeLists.txt
IQ9/dma_buf_pipline/dmabuf_consumer/include/dmabuf_consumer/: consumer.h
IQ9/dma_buf_pipline/dmabuf_consumer/src/: ipc_receiver.h
multi_cam_app/: CMakeLists.txt  main.cpp
multi_cam_app/aggregator/: Aggregator.cpp  Aggregator.hpp  QueueItem.hpp
multi_cam_app/aggregator/test/: build_test_aggregator.sh  run_test_aggregator.sh  test_aggregator.cpp
multi_cam_app/app/: AppContext.hpp  MultiCamApp.cpp  MultiCamApp.hpp
multi_cam_app/build_memtest_asan/: multi-cam-app
multi_cam_app/build_test_deduper/: test_deduper_pipeline  test_deduper_unit
multi_cam_app/build_test_frame_cache/: test_frame_cache
multi_cam_app/build_test_frame_offload/: test_frame_offload
multi_cam_app/build_test_msgagg/: test_msgagg
multi_cam_app/channel_worker/: ChannelWorker.cpp  ChannelWorker.hpp
multi_cam_app/channel_worker/deduper/: Deduper.cpp  Deduper.hpp
multi_cam_app/channel_worker/deduper/gst_plugin/: CMakeLists.txt  gstdeduper.cpp  gstdeduper.h
multi_cam_app/channel_worker/deduper/test/: CMakeLists.txt  build_test_deduper.sh  extract_frames.sh  prepare_test_data.sh  test_deduper_pipeline.cpp  test_deduper_unit.cpp
multi_cam_app/channel_worker/frame_offload/: FrameOffload.cpp  FrameOffload.hpp
multi_cam_app/channel_worker/frame_offload/gst_plugin/: CMakeLists.txt  gstframeoffload.cpp  gstframeoffload.h
multi_cam_app/channel_worker/infer_module/: DetectionInferModule.cpp  DetectionInferModule.hpp
multi_cam_app/channel_worker/infer_module/face_infer/: FaceProcessor.cpp  FaceProcessor.hpp
multi_cam_app/channel_worker/infer_module/face_infer/arcface_infer/: ArcFaceInfer.cpp  ArcFaceInfer.hpp  QnnInferencer.cpp  QnnInferencer.hpp
multi_cam_app/channel_worker/infer_module/face_infer/config/: FaceConfigLoader.hpp  face_config.json  face_config_board.json
multi_cam_app/channel_worker/infer_module/face_infer/face_preprocess/: FacePreprocess.cpp  FacePreprocess.hpp  inverse_affine.hpp
multi_cam_app/channel_worker/infer_module/face_infer/gst_plugin/: CMakeLists.txt  gstfacedetectionmeta.c  gstfacedetectionmeta.h  gstfaceinfer.cpp  gstfaceinfer.h
multi_cam_app/channel_worker/infer_module/face_infer/mem_management/: dma_buffer.cpp  dma_buffer.hpp  dma_sync_guard.hpp  mem_types.hpp  opencl_loader.cpp  opencl_loader.hpp
multi_cam_app/channel_worker/infer_module/face_infer/scrfd_infer/: FaceTypes.hpp  QnnInferencer.cpp  QnnInferencer.hpp  ScrfdDecode.cpp
multi_cam_app/channel_worker/infer_module/face_infer/test/: build_test_face_processor.sh  build_test_gallery_consistency.sh  run_gallery_test.sh  run_pose_test.sh  test_face_processor.cpp  test_gallery_consistency.cpp
multi_cam_app/channel_worker/msg_agg/gst_plugin/: CMakeLists.txt  gstmsgagg.cpp  gstmsgagg.h
multi_cam_app/channel_worker/timing_mark/gst_plugin/: CMakeLists.txt  gsttimingmark.cpp  gsttimingmark.h
multi_cam_app/config/: AppConfig.hpp  ConfigLoader.cpp  ConfigLoader.hpp  DetectionInferModule.cpp  config.json  config.json.bak  config_face_probe.json  config_memtest.json  config_no_arc.json  config_step25_perf.json  config_step26_perf.json
multi_cam_app/data/gallery/: gallery.json
multi_cam_app/data/models/face/: face_detection.json  face_recognition_settings.json  facemap_3dmm_settings.json
multi_cam_app/data/models/yolov11/: metadata.yaml
multi_cam_app/frame_cache/: deploy.md
multi_cam_app/frame_cache/include/frame_cache/: FrameCacheService.hpp
multi_cam_app/frame_cache/src/: config.json  frame_cache_service.cpp  nv12_to_rgb.h  slot_pool.cpp  slot_pool.h
multi_cam_app/metadata/: MetadataTypes.hpp
multi_cam_app/pipeline/: PipelineUtils.cpp  PipelineUtils.hpp
multi_cam_app/scripts/: build.sh  build_aggregator.sh  build_iq9_dma_pipeline.sh  env_local_gst.sh  run_e2e_latency.sh  run_e2e_pipeline.sh  run_face_integration.sh  run_smoke.sh
multi_cam_app/test/dma_buf_pipline/: CLAUDE.md
multi_cam_app/test/dma_buf_pipline/dmabuf_consumer/demo/: consumer_demo.cpp
multi_cam_app/test/dma_buf_pipline/dmabuf_consumer/src/: consumer.cpp
multi_cam_app/test/dma_buf_pipline/dmabuf_producer/: CMakeLists.txt
multi_cam_app/test/dma_buf_pipline/dmabuf_producer/demo/: producer_demo.cpp
multi_cam_app/test/dma_buf_pipline/rule_process/: CMakeLists.txt
multi_cam_app/test/dma_buf_pipline/test/: CMakeLists.txt  iq9_ipc_cache_test  iq9_ipc_cache_test.cpp  producer_bin  validate_ppm.cpp
multi_cam_app/test/single_pipeline/: CMakeLists.txt  build.sh  main.cpp  pipeline_local.cpp  pipeline_local.hpp  run.sh  yolo_chain.cpp  yolo_chain.hpp  yolo_latency_config.cpp  yolo_latency_config.hpp  yolo_qnn_latency_config.example.json  yolo_qnn_latency_config.json
multi_cam_app/utils/: FaceGallery.cpp  FaceGallery.hpp  JsonlWriter.cpp  JsonlWriter.hpp
multi_cam_app/utils/mqtt/: MqttClient.cpp  MqttClient.hpp  MqttPublisher.cpp  MqttPublisher.hpp  MqttSubscriber.cpp  MqttSubscriber.hpp
multi_cam_app/utils/perf/: LatencyRecorder.cpp  LatencyRecorder.hpp  TimingMarkRuntime.cpp  TimingMarkRuntime.hpp
qwen3_vl/qwen3vl_inference/veg/: CMakeLists.txt  veg_combined_runner.cpp  veg_server_combined.cpp
qwen3vit/src/qwen3vit_deploy/: CMakeLists.txt  qwen_vl_opencl_accelerator.cpp  qwen_vl_opencl_accelerator.h  qwen_vl_opencl_kernels.h  qwen_vl_preprocessor.cpp  qwen_vl_preprocessor.h  qwen_vl_rope_tables.h  veg_combined_runner.cpp
template/host/: CMakeLists.txt  benchmark.cpp  opencl_accelerator.h
vlm_pipeline/dmabuf_consumer/: CMakeLists.txt
vlm_pipeline/dmabuf_consumer/demo/: consumer_demo.cpp
vlm_pipeline/dmabuf_consumer/include/dmabuf_consumer/: consumer.h  types.h
vlm_pipeline/dmabuf_consumer/include/vlm/: jpeg_encoder.h  jsonl_logger.h  thread_pool.h  vlm_client.h
vlm_pipeline/dmabuf_consumer/src/: ipc_receiver.cpp  ipc_receiver.h
vlm_pipeline/dmabuf_consumer/src/vlm/: jpeg_encoder.cpp  jsonl_logger.cpp  thread_pool.cpp  vlm_client.cpp
(+359 files in other folders)
